--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
     <title>Phone</title>
 </head>
 <body>
-    <div id="phone-container" class="row row-cols-1 row-cols-md-3 g-4">
-        
-    </div>
+    <section>
+        <div class="d-flex justify-content-center align-items-center mb-5">
+            <input id="search-text" class="text-center" type="text" placeholder="Search">
+            <button id="search-btn" class="text-bg-primary" >Phone Search</button>
+        </div>
+    </section>
+    <section>
+        <div id="phone-container" class="row row-cols-1 row-cols-md-3 g-4">
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="js/phone.js"></script>
