--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <div id="phone-container" class="row row-cols-1 row-cols-md-3 g-4">
         </div>
     </section>
+    <section>
+        <h2 id="no-found" class="text-center text-warning d-none">No data found. Please Search properly or New One</h2>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="js/phone.js"></script>
