--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
         <h2 id="no-found" class="text-center text-warning d-none">No data found. Please Search properly or New One</h2>
     </section>
 
+    <!-- spinning loader -->
+    <section id="loader" class="d-flex justify-content-center d-none">
+        <button class="btn btn-primary " type="button" disabled>
+            <span class="spinner-border spinner-border-sm " aria-hidden="true"></span>
+            <span role="status ">Loading...</span>
+          </button>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="js/phone.js"></script>
 </body>
