show all button add

--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
             <input id="search-text" class="text-center" type="text" placeholder="Search">
             <button id="search-btn" class="text-bg-primary" >Phone Search</button>
         </div>
+
     </section>
     <section>
         <div id="phone-container" class="row row-cols-1 row-cols-md-3 g-4">
         </div>
     </section>
+
     <section>
-        <h2 id="no-found" class="text-center text-warning d-none">No data found. Please Search properly or New One</h2>
+        <h2 id="no-found" class="text-center text-warning d-none">No data found. Please Search properly or try New One</h2>
+
+        <div id="btn-show-all" class="d-flex justify-content-center ">
+            <div id="show-all" class="btn btn-primary d-none">Show All</div>
+        </div>
     </section>
 
     <!-- spinning loader -->
